DDPB-196 wrapped .button in .card-actions to avoid getting very tall

--- a/src/AppBundle/Resources/assets/scss/digideps/_card-list.scss
+++ b/src/AppBundle/Resources/assets/scss/digideps/_card-list.scss
@@ -64,6 +64,7 @@
 
     .card-body {
         display: inline-block;
+
         p:last-child {
             margin-bottom: 0;
         }
@@ -137,7 +138,7 @@
         }
     }
 
-    .button.right {
+    .card-actions {
         @include media(tablet) {
             position: absolute;
             bottom: $gutter-half;
